# QtFrameless

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml  sizeGrip.py  test.py  test1.py  test2.py  test3.py  tis.py
QtFrameless/: __init__.py  button.py  cursor.py  qt_api.py  style.py  titleBar.py  topwidget.py  window.py
QtFrameless.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
assets/: test.py
examples/: basic.py  calculator.py  customtitlebar.py  disco.py  ex1.py  ex10.py  ex11.py  ex12.py  ex13.py  ex14.py  ex15.py  ex16.py  ex17.py  ex18.py  ex2.py  ex3.py  ex4.py  ex5.py  ex6.py  ex7.py  ex8.py  ex9.py  helloworld.py  texteditor.py
src/QtFrameless/: __init__.py  button.py  titleBar.py  window.py
tests/: test_window.py
