[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "QtFrameless"
authors = [{name = "alexpdev", email = "alexpdev@pm.me"}]
description = "A resizable movable frameless window for PySide6."
license = {file = "LICENSE"}
version = "0.1.2"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["Qt", "GUI", "Graphical-User-Interface", "Widget", "Frameless"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = ["PySide6"]

[project.urls]
homepage = "https://github.com/alexpdev/QtFrameless"
repository = "https://github.com"
documentation = "https://alexpdev.github.io/QtFrameless"
changelog = "https://alexpdev.github.io/QtFrameless/changelog/"
issues = "https://github.com/alexpdev/QtFrameless/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {}

[tool.bandit]
skips = ["B101"]

[tool.black]
line-length = 79

[tool.autopep8]
max_line_length = 80
ignore = "E266"
in-place = true
recursive = true
aggressive = 3

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "torrentfile",
]
console_output_style = "progress"
addopts = "--maxfail=3"


[tool.pylint.'MESSAGES CONTROL']
disable = [
    "R1729",
    "W0108",
    "redefined-outer-name",
    "attribute-defined-outside-init",
    "invalid-name",
    "not-callable",
    "consider-using-with",
    "implicit-str-concat"
]

[tool.pylint.'VARIABLES']
callbacks = ["cb_", "_cb", "hook_"]

[tool.pylint. 'FORMAT']
max-line-length = 80
single-line-if-stmt = true

[tool.pylint.'SIMILARITIES']
ignore-comments = true
ignore-docstrings=true
ignore-imports=true

[tool.pylint.'DESIGN']
max-args=15
min-public-methods=0
max-attributes=20
max-statements=75
max-branches=20
min-similarity-lines=4
max-locals=25
